Fix build script for kotlin 1.6