@@ -29,8 +29,8 @@ plugins {
     id 'maven-publish'
     id 'signing'
     id 'com.github.spotbugs' version '4.6.0'
-    id 'org.jetbrains.kotlin.jvm' version '1.5.10'
-    id 'org.jetbrains.kotlin.plugin.spring' version '1.5.10'
+    id 'org.jetbrains.kotlin.jvm'
+    id 'org.jetbrains.kotlin.plugin.spring'
 }
 
 description = "Mechanic"
@@ -71,6 +71,14 @@ if (GC == 'null' || GC == null || GC == "") {
 
 mainClassName = "com.openlattice.mechanic.MechanicKt"
 applicationDefaultJvmArgs = [MECHANIC_XMS, MECHANIC_XMX, "-server", GC, PARALLEL]
+applicationDefaultJvmArgs += [ "--add-modules", "java.base",
+                               "--add-modules", "java.se",
+                               "--add-exports","java.base/jdk.internal.ref=ALL-UNNAMED",
+                               "--add-opens","java.base/java.lang=ALL-UNNAMED",
+                               "--add-opens","java.base/java.nio=ALL-UNNAMED",
+                               "--add-opens","java.base/sun.nio.ch=ALL-UNNAMED",
+                               "--add-opens","java.management/sun.management=ALL-UNNAMED",
+                               "--add-opens","jdk.management/com.sun.management.internal=ALL-UNNAMED"]
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
 
@@ -165,14 +173,26 @@ eclipse {
 
 eclipse.classpath.plusConfigurations += [configurations.provided]
 
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-        freeCompilerArgs += '-Xjvm-default=compatibility'
-    }
+tasks.withType(JavaCompile) {
+    options.compilerArgs+= [ "--add-modules", "java.base",
+                             "--add-modules", "java.se",
+                             "--add-exports","java.base/jdk.internal.ref=ALL-UNNAMED"]
 }
-compileTestKotlin {
+
+tasks.withType(Test) {
+    jvmArgs += [ "--add-modules", "java.base",
+                 "--add-modules", "java.se",
+                 "--add-exports","java.base/jdk.internal.ref=ALL-UNNAMED",
+                 "--add-opens","java.base/java.lang=ALL-UNNAMED",
+                 "--add-opens","java.base/java.nio=ALL-UNNAMED",
+                 "--add-opens","java.base/sun.nio.ch=ALL-UNNAMED",
+                 "--add-opens","java.management/sun.management=ALL-UNNAMED",
+                 "--add-opens","jdk.management/com.sun.management.internal=ALL-UNNAMED"]
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = "11"
+        freeCompilerArgs += '-Xjvm-default=compatibility'
     }
 }
